# Epes-Library

./: Calculator Homework.txt  Homework Assignment - Part 1 - CAESAR - Computer Science (CS).txt  Homework Assignment - Part 2 - CAESAR- CS.txt  Homework Assignment - Part 3 - CAESAR -CS.txt  Insight Dynamic - Holder of Academy.txt  README.md  README_local.md  Term 2 Final CS Project - CAESAR.txt  import simplegui.txt  mkdocs.yml  pyproject.toml
.github/workflows/: tests-docs.yml
docs/: examples.md  index.md
epes/: __init__.py  metrics.py  plots.py  probe.py  utils.py
epes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_metrics.py
